# rust-nickel-first-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
docker/: docker-compose-local.yaml  local-environment.env
src/: main.rs  schema.rs
src/config/: constants.rs  database.rs  mod.rs
src/controller/: controller.rs  user_controller.rs
src/model/: health.rs  user.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
