[package]
name = "first-api-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
log = "0.4.17"
log4rs = "1.2.0"
